--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	
     
     <groupId>com.bank</groupId>
-    <artifactId>spring-boot-swagger-example</artifactId>
+    <artifactId>BankingProject</artifactId>
     <version>1.0.0-SNAPSHOT</version>
     
     <parent>
@@ -39,20 +39,7 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>${mysql.connector.version}</version>
         </dependency>
-        
-        <!-- Springfox Swagger2 -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger2</artifactId>
-            <version>${springfox.version}</version>
-        </dependency>
-        
-        <!-- Springfox Swagger UI -->
-        <dependency>
-            <groupId>io.springfox</groupId>
-            <artifactId>springfox-swagger-ui</artifactId>
-            <version>${springfox.version}</version>
-        </dependency>
+       
     <!-- Spring Boot Starter Test -->
     <dependency>
         <groupId>org.springframework.boot</groupId>
